# lumx

./: CMakeLists.txt  LumX.nsi  LumX.sln  LumX.vcxproj  LumX.vcxproj.filters  README.md  build.bat  build.sh
include/: AnimationManager.h  Application.h  AutoStartManager.h  Common.h  ConfigManager.h  DockModule.h  EventManager.h  MonitorManager.h  PerformanceController.h  SystemTrayIntegration.h  TopBarModule.h  VersionInfo.h  WindowEffectsModule.h  WindowsRegistry.h
src/: main.cpp
src/Core/: AnimationManager.cpp  Application.cpp  AutoStartManager.cpp  ConfigManager.cpp  EventManager.cpp  MonitorManager.cpp  SystemTrayIntegration.cpp
src/Modules/Dock/: DockModule.cpp
src/Modules/TopBar/: TopBarModule.cpp
src/Modules/WindowEffects/: WindowEffectsModule.cpp
src/Performance/: PerformanceController.cpp
